# orbit

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  docker-compose.yml
.claude/rules/: code-review.md  code-writing.md
api/: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md
api/benches/: scalability.rs
api/docs/: BOT-AI-ADAPTIVE-DORMANCY.md
api/scripts/: Cargo.toml  gen-dev-cert.rs
api/src/: config.rs  lib.rs  main.rs  metrics.rs
api/src/ai_manager/: analysis.rs  client.rs  history.rs  mod.rs
api/src/anticheat/: behavior.rs  mod.rs  rate_limiter.rs  sanctions.rs  validator.rs
api/src/game/: constants.rs  game_loop.rs  input_buffer.rs  match_result.rs  mod.rs  performance.rs  spatial.rs  state.rs
api/src/game/systems/: ai.rs  ai_soa.rs  arena.rs  collision.rs  debris.rs  gravity.rs  mod.rs  physics.rs  projectile.rs
api/src/lobby/: manager.rs  mod.rs  player.rs  room.rs
api/src/net/: aoi.rs  connection.rs  delta.rs  dos_protection.rs  framing.rs  game_session.rs  mod.rs  protocol.rs  session.rs  tls.rs  transport.rs
api/src/util/: vec2.rs
client/: .env  BUGS_FOUND.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: index.ts  vite-env.d.ts
client/src/core/: Game.test.ts  Game.ts  World.test.ts  World.ts
client/src/net/: Codec.test.ts  Codec.ts  Protocol.ts  StateSync.test.ts  StateSync.ts  Transport.test.ts  Transport.ts
client/src/systems/: InputSystem.test.ts  InputSystem.ts  RenderSystem.test.ts  RenderSystem.ts
client/src/ui/: Screens.test.ts  Screens.ts
client/src/utils/: Constants.test.ts  Constants.ts  Vec2.test.ts  Vec2.ts
docker/api/: Dockerfile  entrypoint.sh
docker/grafana/dashboards/: orbit-royale-extended.json  orbit-royale.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docker/prometheus/: prometheus.yml
docs/: AI_MANAGER.md  API-DOCUMENTATION.md  OPTIMIZATIONS.md  REFERENCE.md  Technical_Blueprint.md  ai-simulation-manager.md  live-simulation-management.md
