[package]
name = "orbit-royale-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
# All features enabled by default for production
default = ["anticheat", "lobby", "dos_ratelimit", "metrics_extended", "advanced_physics"]

# Anti-cheat system: input validation, sequence tracking, behavior analysis, sanctions
anticheat = []

# Advanced lobby system: rooms, matchmaking, session management
lobby = []

# DoS rate limiting: per-message rate limiting (connection limits always enabled)
dos_ratelimit = []

# Extended metrics: AOI stats, physics stats, detailed performance counters
metrics_extended = []

# Advanced physics: momentum-based collision, kinetic energy calculations
advanced_physics = []

# AI Simulation Manager: autonomous parameter tuning via Claude API
ai_manager = ["reqwest", "chrono"]

# Minimal build without optional features (for testing/debugging)
minimal = []

[dependencies]
# Networking - WebTransport
wtransport = "0.6.1"
tokio = { version = "1.43", features = ["full"] }

# Serialization (NOTE: bincode 2.0 has different API!)
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Performance & Parallelization
rayon = "1.10"
parking_lot = "0.12"
hashbrown = { version = "0.15", features = ["serde", "rayon"] }
crossbeam-channel = "0.5"
bitvec = "1.0"
rustc-hash = "2.1"  # FxHasher - faster hash for small keys (used in gravity calculations)
smallvec = "1.13"   # SmallVec - inline storage for small collections (input buffering)

# TLS (required by wtransport)
rcgen = "0.14"
ring = "0.17"
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# AI Manager dependencies
reqwest = { version = "0.12", features = ["json"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scalability"
harness = false
